--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "serve": "concurrently \"npm run start\" \"npm run mock\"",
+    "mock": "json-server -w db.json -p 5000 -d 450",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1"
   }
 }
